fixes navbar on mobile devices and fixes some bad label placements

--- a/JUDGE/assets/styles.css
+++ b/JUDGE/assets/styles.css
@@ -166,7 +166,7 @@ td a.btn:visited, td a.btn:hover {
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 992px) {
     .wrap {
         margin: 0;
         width: 100%;
